fix: fix loader loading indefinetly on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -290,12 +290,3 @@ body {
     opacity: 1;
   }
 }
-
-.loader {
-  opacity: 1;
-  transition: opacity 0.5s ease-out;
-}
-.loader.hidden {
-  opacity: 0;
-  visibility: hidden;
-}
